--- a/DjangoTweet/tweet/templates/index.html
+++ b/DjangoTweet/tweet/templates/index.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    tweet template
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% block title %}
+tweet template
+{% endblock %}
+
+{% block content %}
+this is content using layout
+{% endblock %}
