--- a/DjangoTweet/tweet/templates/index.html
+++ b/DjangoTweet/tweet/templates/index.html
@@ -5,5 +5,8 @@ tweet template
 {% endblock %}
 
 {% block content %}
-<h1 class='bg-orange-500'>this is content using layout</h1>
+<div class="flex justify-center bg-orange-500 text-5xl">
+    this is Home Page
+</div>
+
 {% endblock %}
