tweet model added and configured

--- a/DjangoTweet/tweet/templates/index.html
+++ b/DjangoTweet/tweet/templates/index.html
@@ -5,8 +5,8 @@ tweet template
 {% endblock %}
 
 {% block content %}
-<div class="flex justify-center bg-orange-500 text-5xl">
-    this is Home Page
+<div class="flex justify-center mt-10 text-5xl">
+    welcom to home page
 </div>
 
 {% endblock %}
