--- a/DjangoTweet/templates/layout.html
+++ b/DjangoTweet/templates/layout.html
@@ -79,8 +79,11 @@
           </div>
         </div>
       </nav>
+
+      <div class="container mx-auto p-4">
       {% block content %}      
       {% endblock %}
+      </div>
     </div>
 </body>
 </html>
