--- a/DjangoTweet/tweet/templates/tweet_list.html
+++ b/DjangoTweet/tweet/templates/tweet_list.html
@@ -5,7 +5,7 @@ tweet template
 {% endblock %}
 
 {% block content %}
-<div class="container mx-auto p-4">
+<a href="{% url 'tweet_create' %}" class="inline-block bg-blue-700 rounded-full px-3 py-1 text-sm font-semibold text-white mr-2 mb-2">Create Tweet</a>
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
     {% for tweet in tweets %}
     <div class="max-w-sm rounded overflow-hidden shadow-lg">
@@ -23,5 +23,4 @@ tweet template
       </div>
     {% endfor %}
   </div>
-</div>
 {% endblock %}
